# gnomledger

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pgl.yaml  pyproject.toml  requirements.txt  vercel.json  vite.config.ts
.github/workflows/: deploy.yml
api/: index.py
backend/: __init__.py  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  protocol.py  schemas.py  utils.py
backend/app/routes/: __init__.py  admin.py  agents.py  billing.py  capi.py  incidents.py  integrations.py  ledger.py  lineage.py  mcp.py  notary.py  reminders.py
backend/app/services/: __init__.py  adapter_service.py  analytics_service.py  billing_service.py  capi_registration.py  certificate_service.py  crypto_service.py  genome_service.py  incident_service.py  key_service.py  ledger_service.py  lineage_service.py  merkle_service.py  reminder_service.py  trust_policy.py  x402_service.py
backend/migrations/versions/: 0002_incident_records_audit_reminders.py
backend/tests/: conftest.py  test_adapter_integration.py  test_billing_and_auth.py  test_incidents_and_reminders.py  test_ledger_and_lineage.py
docs/: README.md  architecture.md  build-scope.md  deployment-operations.md  module-packaging.md  operator-manual.md  revenue-model.md  roadmap.md  security-compliance.md
src/: App.tsx  api.ts  data.ts  styles.css  types.ts
src/components/: ExecutionIdentityV1Control.tsx  GoogleSheetsSync.tsx  ManualHashVerifier.tsx  (+1 more)
tests/: test_merkle.py
(+3 files in other folders)
