[tool.poetry]
name = "project-genome-ledger-api"
version = "0.1.0"
description = "Project Genome Ledger backend service"
authors = ["Cascade AI <engineering@pgl.ai>"]
license = "Proprietary"
readme = "../README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
sqlalchemy = "^2.0.28"
psycopg[binary] = "^3.1.18"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
httpx = "^0.27.0"
structlog = "^24.1.0"
redis = "^5.0.3"
stripe = "^7.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
ruff = "^0.3.4"
mypy = "^1.8.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
